# world-cup-2026-oracle

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  netlify.toml  railway.toml  render.yaml  template.config.json  vercel.json
.cursor/rules/: agent-workspace.mdc
.github/: copilot-instructions.md
agents/: README.md  registry.yaml
context/: README.md
docs/: DEPLOY.md  RELEASE.md  USAGE.md
memory/: README.md
policies/: README.md  communication.md  git-workflow.md  safety.md
src/backend/: .env.example  pyproject.toml  requirements.txt
src/backend/app/: main.py  services.py  version.py
src/backend/app/api/: backtest.py  matches.py  models.py  predictions.py  routes.py  simulation.py  sync.py  version_info.py  wc2026.py
src/backend/app/data/: confederations.json  loader.py  store.py  team_aliases.json  wc2026_fixtures.json
src/backend/app/data/providers/: api_football.py  base.py  duckduckgo_search.py  livesoccer_tv.py  score_html.py  seed_json.py
src/backend/app/model/: artifacts.py  backtest.py  elo.py  predictor.py  simulation.py  versioning.py
src/backend/app/sync/: scheduler.py  service.py
src/backend/scripts/: deploy_prepare.py  fetch_data.py  run_backtest.py  sync_live_data.py  train_model.py
src/backend/tests/: conftest.py  test_api_version.py  test_duckduckgo_provider.py  test_fixture_store.py  test_model_artifacts.py  test_no_leakage.py  test_versioning.py  test_wc2026_api.py
tasks/: README.md
tools/: README.md
workspace/: README.md
(+59 files in other folders)
