[project]
name = "world-cup-2026-oracle-backend"
version = "1.0.0"
description = "World Cup 2026 Oracle backend (Elo + logistic model)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
